--- a/Project/settings/project.json
+++ b/Project/settings/project.json
@@ -3,10 +3,17 @@
   "collision-matrix": [
     [
       true,
+      true,
       true
     ],
     [
       true,
+      true,
+      false
+    ],
+    [
+      true,
+      false,
       true
     ]
   ],
@@ -27,7 +34,8 @@
   "fit-width": false,
   "group-list": [
     "default",
-    "Map"
+    "Map",
+    "Enemy"
   ],
   "last-module-event-record-time": 0,
   "simulator-orientation": false,
@@ -36,5 +44,6 @@
     "width": 960
   },
   "use-customize-simulator": true,
-  "use-project-simulator-setting": false
+  "use-project-simulator-setting": false,
+  "start-scene": "current"
 }
