--- a/Project/settings/project.json
+++ b/Project/settings/project.json
@@ -4,17 +4,26 @@
     [
       true,
       true,
-      true
-    ],
-    [
-      true,
       true,
       false
     ],
     [
       true,
+      true,
       false,
+      false
+    ],
+    [
+      true,
+      false,
+      true,
       true
+    ],
+    [
+      false,
+      false,
+      true,
+      false
     ]
   ],
   "design-resolution-height": 640,
@@ -35,7 +44,8 @@
   "group-list": [
     "default",
     "Map",
-    "Enemy"
+    "Enemy",
+    "Bind"
   ],
   "last-module-event-record-time": 0,
   "simulator-orientation": false,
@@ -44,6 +54,5 @@
     "width": 960
   },
   "use-customize-simulator": true,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
