--- a/NewProject/settings/project.json
+++ b/NewProject/settings/project.json
@@ -4,9 +4,7 @@
     [
       true,
       true,
-      true
-    ],
-    [
+      true,
       true,
       true,
       false
@@ -14,7 +12,51 @@
     [
       true,
       false,
+      true,
+      null,
       true
+    ],
+    [
+      true,
+      true,
+      true,
+      null,
+      null,
+      null,
+      true
+    ],
+    [
+      true,
+      false,
+      false,
+      false
+    ],
+    [
+      true,
+      true,
+      false,
+      false,
+      false,
+      null,
+      true
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      false,
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      true,
+      false,
+      true,
+      false,
+      false
     ]
   ],
   "design-resolution-height": 640,
@@ -33,9 +75,13 @@
   "fit-height": true,
   "fit-width": false,
   "group-list": [
-    "default",
+    "Player",
     "Map",
-    "Enemy"
+    "Enemy",
+    "Supply",
+    "Bullet",
+    "default",
+    "Shield"
   ],
   "last-module-event-record-time": 0,
   "simulator-orientation": false,
@@ -44,6 +90,5 @@
     "width": 960
   },
   "use-customize-simulator": true,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
